--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@supabase/supabase-js": "^2.47.10",
     "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^10.0.0",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.0",
+    "filesize": "^10.1.6",
     "http-errors": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
@@ -28,12 +31,14 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
     "concurrently": "^9.1.0",
     "dotenv": "^16.4.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.1.0",
+    "sharp": "^0.33.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
