--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@quixo3/prisma-session-store": "^3.1.13",
     "@supabase/supabase-js": "^2.47.10",
     "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^10.0.0",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "filesize": "^10.1.6",
     "http-errors": "^2.0.0",
@@ -30,9 +32,13 @@
     "pug": "^3.0.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
     "concurrently": "^9.1.0",
     "dotenv": "^16.4.7",
     "jest": "^29.7.0",
